--- a/html/Startseite.html
+++ b/html/Startseite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>Startseite</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -14,32 +14,60 @@
 </head>
 
 <body>
-	<h1 class="text-center"> Musclepedia </h1>
 
-	<div>
-		<ul class="nav nav-tabs">
-			<li class="active"><a href="#">Home</a></li>
-			<li class="dropdown" ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
-				<ul class="dropdown-menu">
-					<li> <a> Oberkörper</a> </li>
-					<li> <a> Arme </a></li>
-					<li> <a> Beine</a></li>
-					<li> <a> Bauch</a></li>
-				</ul>
-			</li>
-			<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>	
-				<ul class="dropdown-menu">
-					<li> <a> Anfänger </a> </li>
-					<li> <a>Fortgeschritten </a></li>
-					<li> <a>Profis </a></li>
-				</ul>
-			</li>
-			<li role="presentation"><a href="#">Profil</a></li>
-			<li role="presentation"><a href="#">Studios</a></li>
-			<li role="presentation"><a href="#">Hilfe</a></li>
-		</ul>
-	</div>
+<div class="container-fluid">
+	<div class="row">
+		<h1 class="text-center"> Musclepedia <br><small> Starkes Wissen rund um Fitness </small></h1>
+		<br>
+		<div class="col-md-2">
+			<br>
+			<br>
+			<br>
+			<blockquote>
+				<p> "Go hard or go home" <small> jemand </small> </p>
+			</blockquote>
+			<blockquote>
+				<p> "No Pain No Gain"  <small> jemand anderes </small></p>
+			</blockquote>
+			<blockquote>
+				<p> "Make your body your machine" <small> irgendjemand </small> </p>
+			</blockquote>
+			
+		</div>
+		<div class="col-md-8">
+			<ul class="nav nav-tabs">
+				<li class="active"><a href="#">Home</a></li>
+				<li class="dropdown" ><a href="#" class="dropdown-toggle" data-toggle="dropdown">Übungen<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li> <a> Oberkörper</a> </li>
+						<li> <a> Arme </a></li>
+						<li> <a> Beine</a></li>
+						<li> <a> Bauch</a></li>
+					</ul>
+				</li>
+				<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pläne <span class="caret"></span></a>	
+					<ul class="dropdown-menu">
+						<li> <a> Anfänger </a> </li>
+						<li> <a>Fortgeschritten </a></li>
+						<li> <a>Profis </a></li>
+					</ul>
+				</li>
+				<li role="presentation"><a href="#">Profil</a></li>
+				<li role="presentation"><a href="#">Studios</a></li>
+				<li role="presentation"><a href="#">Hilfe</a></li>
+			</ul>
+			<br>
+				Auf dieser Seite lernen Sie alle rund um das Thema Fitness.
+				Lernen Sie sowhl neue Übungen, als auch Trainingspläne kennen, oder stellen
+				Sie sich ganz einfach Ihren individuellen Trainingsplan zusammen.
+		</div>
 		
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+		<div class="col-md-2">
+		</div>
+
+			
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	</div>
+</div>
 </body>
