--- a/html/Loginseite_Arif.html
+++ b/html/Loginseite_Arif.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<title>Musclepedia</title>
 	<meta charset="utf-8"/>
 </head>
 <body>
+	<div class="text-center">
 	<h1>Musclepedia</h1>
 	<h2>Starkes Wissen rund um Wissen</h2>
-	<h3>Login</h3>
-	<div id="login">
+	<nav class="navbar navbar-default">
+		<p>Registrieren</p>
+		<p>Login</p>
+	</nav>
+	<div id="login" class="col-md-4 col-md-offset-2">
 		<form method="post">
-			<p>Benutzername: <input type="text" name="username"/></p>
-			<p>Passwort: <input type="password" name="password"/></p>
-			<input type="submit" name="login" value="Login"/>
+		<div class="form-group">
+			<h3>Login</h3>
+			<p>Benutzername: <input type="text" name="username" class="form-control"/></p>
+			<p>Passwort: <input type="password" name="password" class="form-control"/></p>
+			<input class="btn btn-success" type="submit" name="login" value="Login"/>
+		</div>
 		</form>
 	</div>
-	<h3>Registrieren</h3>
-	<div id="reg">
+	<div id="reg" class="col-md-4">
 		<form method="post">
-			<p>Benutzername: <input type="text" name="username"/></p>
-			<p>Passwort: <input type="password" name="passwordf"/></p>
-			<p>Passwort wiederholen: <input type="password" name="passwords"/></p>
-			<p>Email-Adresse: <input type="email" name="mail"/></p>
-			<input type="submit" name="login" value="Registrieren"/>
+		<div class="form-group">
+			<h3>Registrieren</h3>
+			<p>Benutzername: <input type="text" name="username" class="form-control"/></p>
+			<p>Passwort: <input type="password" name="passwordf" class="form-control"/></p>
+			<p>Passwort wiederholen: <input type="password" name="passwords" class="form-control"/></p>
+			<p>Email-Adresse: <input type="email" name="mail" class="form-control"/></p>
+			<input class="btn btn-success" type="submit" name="login" value="Registrieren"/>
+		</div>
 		</form>
 	</div>
+
+	<div><ul class="nav nav-tabs" role="tablist" id="myTab">
+  <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+  <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+  <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+  <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+</ul>
+
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane active" id="home">...</div>
+  <div role="tabpanel" class="tab-pane" id="profile">Test</div>
+  <div role="tabpanel" class="tab-pane" id="messages">Test2</div>
+  <div role="tabpanel" class="tab-pane" id="settings">...</div>
+</div>
+
+<script>
+  $(function () {
+    $('#myTab a:last').tab('show')
+  })
+</script></div>	</div>
 </body>
 </html>
