--- a/html/Loginseite_Arif.html
+++ b/html/Loginseite_Arif.html
@@ -3,27 +3,66 @@
 <head>
 	<title>Musclepedia</title>
 	<meta charset="utf-8"/>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </head>
 <body>
-	<h1>Musclepedia</h1>
-	<h2>Starkes Wissen rund um Wissen</h2>
-	<h3>Login</h3>
-	<div id="login">
-		<form method="post">
-			<p>Benutzername: <input type="text" name="username"/></p>
-			<p>Passwort: <input type="password" name="password"/></p>
-			<input type="submit" name="login" value="Login"/>
-		</form>
-	</div>
-	<h3>Registrieren</h3>
-	<div id="reg">
-		<form method="post">
-			<p>Benutzername: <input type="text" name="username"/></p>
-			<p>Passwort: <input type="password" name="passwordf"/></p>
-			<p>Passwort wiederholen: <input type="password" name="passwords"/></p>
-			<p>Email-Adresse: <input type="email" name="mail"/></p>
-			<input type="submit" name="login" value="Registrieren"/>
-		</form>
+	<div class="container-fluid text-center">
+		<h1>Musclepedia</h1>
+		<h2>Starkes Wissen rund um Fitness</h2>
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+		<div role="tabpanel">
+
+		  <!-- Nav tabs -->
+		  <ul class="nav nav-tabs" role="tablist" id="myTab">
+			<li role="presentation" class="active"><a href="#login" aria-controls="login" role="tab" data-toggle="tab">Login</a></li>
+			<li role="presentation"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Registrieren</a></li>
+		  </ul>
+
+		  <!-- Tab panes -->
+		  <div class="tab-content">
+			<div role="tabpanel" class="col-md-6 tab-pane" id="login">
+				<form method="post">
+				<div class="form-group">
+					<h3>Login</h3>
+					<label for="name1">Benutzername</label>
+					<input id="name1" class="form-control" type="text" placeholder="Name"/>
+					<label for="pass1">Passwort</label>
+					<input id="pass1" class="form-control" type="password" placeholder="Passwort"/>
+					</br>
+					<input type="submit" class="btn btn-primary" name="login" value="Login"/>
+				</div>
+				</form>
+				
+			</div>
+			<div role="tabpanel" class="tab-pane col-md-6 active" id="register">
+				<form method="post" >
+				<div class="form-group"></div>
+					<h3>Registrieren</h3>
+					<label for="name2">Benutzername</label>
+					<input id="name2" class="form-control" type="text"/>
+					<label for="pass2">Passwort</label>
+					<input id="pass3" class="form-control" type="password"/>
+					<label for="pass3">Passwort wiederholen</label>
+					<input class="form-control" type="password" name="passwords"/>
+					<label for="email">Email-Adresse</label>
+					<input id="email" class="form-control" type="email" name="mail"/>
+					</br>
+					<input type="submit" class="btn btn-primary" name="login" value="Registrieren"/>
+				</form>
+			</div>
+		  </div>
+		</div>
+		</div>
+		<div class="col-md-2"></div>
 	</div>
 </body>
 </html>
