keine ahnung was ich hier commiten muss :ambulance:

--- a/vorarbeit/html/Startseite.html
+++ b/vorarbeit/html/Startseite.html
@@ -17,8 +17,10 @@
 
 <div class="container-fluid">
 	<div class="row">
+		<header>
 		<h1 class="text-center"> Musclepedia <br><small> Starkes Wissen rund um Fitness </small></h1>
 		<br>
+		</header>
 		<div class="col-md-2">
 			<br>
 			<br>
@@ -71,3 +73,4 @@
 	</div>
 </div>
 </body>
+</html>
